cmake_minimum_required(VERSION 3.2)
project(Game)
set(CMAKE_C_STANDARD 11)
set(EXECUTABLE_OUTPUT_PATH bin/${CMAKE_BUILD_TYPE})
set(COMMON_SOURCES socket_util.c socket_util.h)
set(SERVER_SOURCE_FILES server_main.c ${COMMON_SOURCES} server.c server.h)
set(CLIENT_SOURCE_FILES client_main.c ${COMMON_SOURCES} client.c client.h)
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "adama dodo cisse <adama.dodo.cisse@gmail.com>")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "bomberman description summary")
set(CPACK_PACKAGE_DESCRIPTION "bomberman description")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsdl2-dev,libsdl2-image-dev")
add_executable(bomberman-server ${SERVER_SOURCE_FILES})
add_executable(bomberman-client ${CLIENT_SOURCE_FILES})
if (DEFINED WIN32)
  set(WINDOWS_TARGET_COMMON_LINKS wsock32 ws2_32 winmm mingw32)
  target_link_libraries(bomberman-server ${WINDOWS_TARGET_COMMON_LINKS})
  target_link_libraries(bomberman-client ${WINDOWS_TARGET_COMMON_LINKS} SDL2main SDL2_image SDL2)
elseif(DEFINED UNIX)
  target_link_libraries(bomberman-client SDL2main SDL2_image SDL2)
  include(CPack)
  install(TARGETS bomberman-server DESTINATION bin)
  install(TARGETS bomberman-client DESTINATION bin)
  install(DIRECTORY sprites DESTINATION share/bomberman)
  install(FILES map.txt DESTINATION share/bomberman)
endif ()
